[package]
edition = "2021"
name = "oclock"
version = "0.1.4"

authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Time tracking utility"
keywords = [ "time-tracking", "daemon", "utility" ]
repository = "https://github.com/dghilardi/oclock"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
log = "0.4"
env_logger = "0.10"
Inflector = {version="0.11", default-features=false}

nng = "1.0"
getopts = "0.2"

schedule = "0.1"
itertools = "0.12"

csv = "1.3"
serde = { version ="1.0", features = ["derive"] }
serde_json = "1.0"

ctrlc = { version = "3.4", features = ["termination"] }

[dependencies.oclock_sqlite]
version = "0.1.4"
path = "libs/oclock_sqlite"
