[package]
edition = "2021"
name = "oclock"
version = "0.1.6"

authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Time tracking utility"
keywords = [ "time-tracking", "daemon", "utility" ]
repository = "https://github.com/dghilardi/oclock"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
log = "0.4"

env_logger = { version = "0.10", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }

nng = { version = "1.0", optional = true }

Inflector = {version="0.11", default-features=false, optional = true}

schedule = { version = "0.1", optional = true }
itertools = { version = "0.12", optional = true }

csv = { version = "1.3", optional = true }
serde = { version ="1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

ctrlc = { version = "3.4", features = ["termination"], optional = true }

[dependencies.oclock_sqlite]
optional = true
version = "0.1.5"
path = "libs/oclock_sqlite"

[features]
client = ["nng"]
server = ["nng", "Inflector", "schedule", "itertools", "csv", "serde", "serde_json", "ctrlc", "oclock_sqlite"]
bin-cli = ["clap", "env_logger"]

[[bin]]
name = "oclock"
required-features = ["bin-cli"]
