[package]
edition = "2021"
name = "oclock_sqlite"
version = "0.1.4"
authors = ["Davide Ghilardi <ghilardi.davide@gmail.com>"]

[dependencies]
log = "0.4"

diesel = { version = "2.1", features = ["sqlite"] }
diesel_migrations = { version = "2.1", features = ["sqlite"] }

serde = { version ="1.0", features = ["derive"] }