[package]
edition = "2021"
name = "oclock_sqlite"
version = "0.1.5"

authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Time tracking utility (sqlite component)"
keywords = [ "time-tracking", "daemon", "utility" ]
repository = "https://github.com/dghilardi/oclock"
license = "GPL-3.0-or-later"
readme = "../../README.md"

[dependencies]
log = "0.4"

diesel = { version = "2.1", features = ["sqlite"] }
diesel_migrations = { version = "2.1", features = ["sqlite"] }

serde = { version ="1.0", features = ["derive"] }